--- a/wear/src/main/res/layout/point_activity.xml
+++ b/wear/src/main/res/layout/point_activity.xml
@@ -34,7 +34,7 @@
                     android:id="@+id/layoutPointPFBack"
                     android:visibility="visible">
 
-                    <LinearLayout
+                    <FrameLayout
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_weight="1"
@@ -42,14 +42,14 @@
 
                         <ImageView
                             android:src="@drawable/ic_undo_black_48dp"
-                            android:layout_width="match_parent"
+                            android:layout_width="wrap_content"
                             android:layout_height="match_parent"
                             android:id="@+id/imageViewPointPFBack"
-                            android:layout_gravity="center_horizontal"
+                            android:layout_gravity="left|top"
                             />
-                    </LinearLayout>
+                    </FrameLayout>
 
-                    <LinearLayout
+                    <FrameLayout
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_weight="1"
@@ -58,12 +58,12 @@
 
                         <ImageView
                             android:src="@drawable/ic_keyboard_voice_black_48dp"
-                            android:layout_width="match_parent"
+                            android:layout_width="wrap_content"
                             android:layout_height="match_parent"
                             android:id="@+id/imageViewPointVoice"
-                            android:layout_gravity="center_horizontal"
+                            android:layout_gravity="right|top"
                             />
-                    </LinearLayout>
+                    </FrameLayout>
 
 
                 </LinearLayout>
