--- a/wear/src/main/res/layout/dialog_layout.xml
+++ b/wear/src/main/res/layout/dialog_layout.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/container"
+    android:id="@+id/dialog_container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:deviceIds="wear">
@@ -40,7 +40,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="left|bottom"
-                android:src="@drawable/ic_clear_black_24dp"
+                android:src="@drawable/ic_clear_black_48dp"
                 app:circle_color="#AFAFAF"
                 app:circle_radius="25dp"
                 app:circle_radius_pressed="20dp" />
@@ -50,7 +50,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="right|bottom"
-                android:src="@drawable/ic_check_black_24dp"
+                android:src="@drawable/ic_check_black_48dp"
                 app:circle_color="#0EB695"
                 app:circle_radius="25dp"
                 app:circle_radius_pressed="20dp" />
