--- a/wear/src/main/res/layout/sets_layout.xml
+++ b/wear/src/main/res/layout/sets_layout.xml
@@ -12,7 +12,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
+        android:orientation="horizontal"
         app:layout_box="all">
 
         <FrameLayout
@@ -96,6 +96,7 @@
 
                 />
         </LinearLayout>
+
 
 
 
