--- a/wear/src/main/res/layout/game_activity.xml
+++ b/wear/src/main/res/layout/game_activity.xml
@@ -66,7 +66,7 @@
                             android:layout_weight="2"
                             android:orientation="horizontal"
                             android:id="@+id/layoutVoiceSupport"
-                            android:visibility="invisible">
+                            android:visibility="visible">
 
                             <ImageView
                                 android:layout_width="wrap_content"
